# hid-forwarder

./: .gitignore  .gitmodules  CLAUDE.md  README.md  build_pico_no_git.ps1
.github/workflows/: build-receiver-pico.yml  release.yml
docs/: code.js  index.html
receiver-config/: code.js  index.html
receiver-pico/: CMakeLists.txt  receiver_pico.uf2  receiver_pico2.uf2  receiver_pico_w.uf2
receiver-pico/src/: bt.c  bt.h  btstack_config.h  btstack_wrapper.h  descriptors.c  descriptors.h  globals.c  globals.h  hid_receiver.gatt  receiver.c  receiver.gatt  receiver.h  receiverwithoutble.c
receiverble-config/: code.js  index.html
transmitter-ble-web/: code.js  index.html
transmitter-python/: devices.py  gamepad_forward.py  gamepad_test.py  mouse_test.py  network_transmitter.py  serial_transmitter.py  transmitter_helper.py
transmitter-web/: code.js  index.html
